# serde_dbgfmt

./: CHANGELOG.md  Cargo.toml  README.md  generate.sh
.github/workflows/: ci.yaml
src/: de.rs  error.rs  lex.rs  lib.rs  tests.rs
tests/: collection_edge_cases.rs  de.rs  deserializer_features.rs  enum_variants.rs  error_handling.rs  numeric_formats.rs  real_world_debug.rs  round_trip.rs  simple_error_test.rs  string_handling.rs  struct_variations.rs  whitespace_formatting.rs
