[package]
name = "serde_dbgfmt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/phantomical/serde_dbgfmt"
categories = ["encoding", "parser-implementations"]
description = "Deserialize #[derive(Debug)] output using serde"
rust-version = "1.67"

[dependencies]
serde = "1.0"
unicode-ident = "1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1.15"
